force-app/main/default/objects/Post_Service_Feedback__c/Post_Service_Feedback__c.object-meta.xml
<CustomObject>
    <label>Post Service Feedback</label>
    <nameField>
        <displayFormat>PSF-{00000}</displayFormat>
        <label>PSF No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Post Service Feedbacks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>