force-app/main/default/objects/Post_Service_Feedback__c/fields/Job_Card__c.field-meta.xml
<CustomField>
    <fullName>Job_Card__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Card</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Post Service Feedbacks</relationshipLabel>
    <relationshipName>Post_Service_Feedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>