force-app/main/default/objects/Post_Service_Feedback__c/fields/Next_Follow_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Follow_Up_Date__c</fullName>
    <inlineHelpText>If Sub-Status is Call Later, then mention the Next Follow up Date</inlineHelpText>
    <label>Next Follow Up Date</label>
    <type>Date</type>
</CustomField>